Issue #1558952: #navigation overflows parent container in fixed width layout

--- a/css/layouts/fixed-width-rtl.css
+++ b/css/layouts/fixed-width-rtl.css
@@ -71,7 +71,7 @@
   position: absolute;
   top: 0; /* Move the navbar up inside #main's padding. */
   height: 3em;
-  width: 980px;
+  width: 960px;
 }
 
 /*
